# Hydroponics

./: README.md
amr_mani_description/: CMakeLists.txt  package.xml
amr_mani_description/models/Intel RealSense D435/: model.sdf
amr_mani_description/models/amr_mani/: amr_ust.sdf  model.config
amr_mani_description/models/amr_mani/meshes/: Camera_1.stl  Intel_Realsense_RPLIDAR_1.stl  imu_1.stl  (+36 more)
amr_mani_moveit/: CMakeLists.txt  package.xml
amr_mani_moveit/config/: amr_mani.ros2_control.xacro  amr_mani.srdf  amr_mani.urdf.xacro  amr_mani_servo.yaml  arm_servo.yaml  joint_limits.yaml  moveit_controllers.yaml
amr_mani_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_amr_mani.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
blend_files/: glass_house_model.blend  glass_house_model.blend1
dae_sda/: conv.py
goal_pose_commander/: CMakeLists.txt  package.xml
goal_pose_commander/src/: go_to_pose.cpp
ponics/: CMakeLists.txt  package.xml
ponics/config/: bridge_params.yaml  initial_positions.yaml  ros_controllers.yaml
ponics/launch/: gazebo.launch.py  gz.launch.py  world.launch.py
ponics/models/Mud Box/: model.sdf
ponics/models/hydroponics/: model.config  model.sdf
ponics/rviz/: default.rviz
ponics/world/: system_test.world  world.sdf  world2.sdf
pymoveit2/examples/: ex_collision_object.py  ex_joint_goal.py  ex_pose_goal.py  ex_servo.py  task1b.py
pymoveit2/pymoveit2/: moveit2_servo.py
pymoveit2/pymoveit2/robots/: amr_mani.py
(+1 files in other folders)
